--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <div class="idx_banner">
                     <div class="bnmask"><img src="images/bn_mask.png"></div>
                     <div class="video-container">
-                        <video width="100%" controls src="hall2.mov" Autoplay="autoplay" loop="loop" muted="true">
+                        <video width="100%" controls src="hall2.mp4" Autoplay="autoplay" loop="loop" muted="true">
                         </video>
                     </div>
                 </div>
@@ -529,15 +529,15 @@
                     <div class="evnt_viewpic">
                         <a href="calendar_more1.html">
                             <div class="evn_box">
-                                <div class="event_pic"><img src="images/eventa01.png"></div>
+                                <div class="event_pic"><img src="images/eventa07.jpg"></div>
                                 <div class="calen-card_tab news_blue">展覽</div>
                                 <div class="event_bg">
-                                    <div class="date_title">2019 台灣機器人與智慧自動化展</div>
+                                    <div class="date_title">台北國際工具機展覽會</div>
                                     <div class="event_sub-content">
                                         <ul>
-                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
+                                            <li>展覽活動期間：2019/3/4-3/9</li>
                                             <li>展覽活動地點：一樓展場</li>
-                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
+                                            <li>展覽主辦單位：中華民國對外貿易發展協會</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -546,15 +546,15 @@
 
                         <a href="calendar_more2.html">
                             <div class="evn_box">
-                                <div class="event_pic"><img src="images/eventa02.png"></div>
+                                <div class="event_pic"><img src="images/eventa08.jpg"></div>
                                 <div class="calen-card_tab news_blue">展覽</div>
                                 <div class="event_bg">
-                                    <div class="date_title">2019 台灣國際人工智慧暨物聯網展</div>
+                                    <div class="date_title">台北國際自行車展覽會</div>
                                     <div class="event_sub-content">
                                         <ul>
-                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
-                                            <li>展覽活動地點：一樓展場</li>
-                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
+                                            <li>展覽活動期間：2019/3/27-3/30</li>
+                                            <li>展覽活動地點：一樓展場、四樓展場</li>
+                                            <li>展覽主辦單位：中華民國對外貿易發展協會</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -563,15 +563,49 @@
 
                         <a href="calendar_more3.html">
                             <div class="evn_box">
-                                <div class="event_pic"><img src="images/eventa03.png"></div>
+                                <div class="event_pic"><img src="images/eventa09.jpg"></div>
                                 <div class="calen-card_tab news_blue">展覽</div>
                                 <div class="event_bg">
-                                    <div class="date_title">2019 台北國際模具暨模具製造設備暨3D列印展</div>
+                                    <div class="date_title">台北國際汽車零配件展覽會</div>
                                     <div class="event_sub-content">
                                         <ul>
-                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
-                                            <li>展覽活動地點：一樓展場</li>
-                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
+                                            <li>展覽活動期間：2019/4/24-4/27</li>
+                                            <li>展覽活動地點：一樓展場、四樓展場</li>
+                                            <li>展覽主辦單位：中華民國對外貿易發展協會</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="calendar_more4.html">
+                            <div class="evn_box">
+                                <div class="event_pic"><img src="images/eventa10.jpg"></div>
+                                <div class="calen-card_tab news_blue">展覽</div>
+                                <div class="event_bg">
+                                    <div class="date_title">台北國際電腦展</div>
+                                    <div class="event_sub-content">
+                                        <ul>
+                                            <li>展覽活動期間：2019/5/28-6/1</li>
+                                            <li>展覽活動地點：一樓展場、四樓展場</li>
+                                            <li>展覽主辦單位：中華民國對外貿易發展協會</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="calendar_more5.html">
+                            <div class="evn_box">
+                                <div class="event_pic"><img src="images/eventa11.jpg"></div>
+                                <div class="calen-card_tab news_blue">展覽</div>
+                                <div class="event_bg">
+                                    <div class="date_title">台北國際食品展覽會</div>
+                                    <div class="event_sub-content">
+                                        <ul>
+                                            <li>展覽活動期間：2019/6/19-6/22</li>
+                                            <li>展覽活動地點：一樓展場、四樓展場</li>
+                                            <li>展覽主辦單位：中華民國對外貿易發展協會</li>
                                         </ul>
                                     </div>
                                 </div>
