--- a/conference-room_item5.html
+++ b/conference-room_item5.html
@@ -139,15 +139,50 @@
                         <a href="conference-room_item7.html"><li>其他服務</li></a>
                     </ul>
                 </div>
+
+                <div class="mod-organizer_title">請選擇類別</div>
+                <div class="chi_box">
+                    <a href="#"><div class="chiese_btn chi_blue">活動</div></a>
+                    <a href="#"><div class="chiese_btn ">會議</div></a>
+
+                </div>
+
+                <div class="mod-organizer_title">請選擇樓層</div>
+                <!--會議-->
+                <!-- <div class="chi_box">
+                    <a href="#"><div class="chiese_btn chi_blue">1F</div></a>
+                    <a href="#"><div class="chiese_btn">6F</div></a>
+                    <a href="#"><div class="chiese_btn">7F</div></a>
+                </div> -->
+                <!--活動-->
+
+                <div class="chi_box">
+                    <a href="#"><div class="chiese_btn">1F</div></a>
+                    <a href="#"><div class="chiese_btn">4F</div></a>
+                    <a href="#"><div class="chiese_btn chi_blue">7F</div></a>
+                </div>
+                <div class="mod-organizer_title">請勾選想要租借區域(可複選)</div>
+                <div class="chke_wrip">
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> T</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> U</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> A</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> B</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> C</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> D</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> E</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> F</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> G</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> 701會議室</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> 702會議室</div>
+                    <div class="Qmap_01"><input name="" type="checkbox" value="" /> 703會議室</div>
+                </div>
+                <div class="top_map">
+                    <!-- <img src="images/7F_top01.jpg"> -->
+                </div>
+
+
                 <div class="rental_toptable">
                     <table width="100%" border="0">
-                      <tr>
-                        <td class="rentaltop_gray">選擇樓層</td>
-                        <td><input name="" type="radio" value="" />3樓</td>
-                        <td><input name="" type="radio" value="" />4樓</td>
-                        <td><input name="" type="radio" value="" />5樓</td>
-                        <td><input name="" type="radio" value="" />6樓</td>
-                      </tr>
                       <tr>
                         <td class="rentaltop_gray">選擇會議室</td>
                         <td><input name="" type="radio" value="" />福軒</td>
