--- a/aboutus8.html
+++ b/aboutus8.html
@@ -10,8 +10,9 @@
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="css/swiper.css">
+    <script src="dist/js/swiper.min.js"></script>
     <title></title>
-
 </head>
 
 <body>
@@ -140,21 +141,21 @@
                     </ul>
                 </div>
             </div>
-
-                <div class="big_lightbanner">
-                    <a class="ie-prev"><i class="mdi mdi-chevron-right"></i></a>
-                    <a class="ie-next"><i class="mdi mdi-chevron-left"></i></a>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn"><img src="images/traffic.jpg"></div>
+            <div class="swiper-container">
+                <div class="big_lightbanner swiper-wrapper">
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
                 </div>
-
+                <a class="ie-prev"><i class="mdi mdi-chevron-right"></i></a>
+                <a class="ie-next"><i class="mdi mdi-chevron-left"></i></a>
+            </div>
         </article>
 
 
@@ -214,7 +215,35 @@
             </div>
         </footer>
     </div>
-
+    <script type="text/javascript">
+      $(document).ready(function() {
+        setSwiper()
+        $( window ).resize(function() {
+          setSwiper()
+        })
+      })
+      function setSwiper(){
+        var ww = $(window).width()
+        console.log("ww:"+ww)
+        var swiper
+        if(ww>=768){
+          swiper = new Swiper('.swiper-container', {
+             slidesPerView: 3,
+             spaceBetween: 30,
+             freeMode: true,
+             nextButton: '.ie-prev',
+             prevButton: '.ie-next',
+            loop:true
+           });
+        }else{
+          swiper = new Swiper('.swiper-container', {
+            nextButton: '.ie-prev',
+            prevButton: '.ie-next',
+            loop: true
+          });
+        }
+      }
+    </script>
 </body>
 
 </html>
