--- a/aboutus.html
+++ b/aboutus.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="news_continer">
-                    <div class="widget-pic"><img src="images/vrpi.jpg"></div>
+                    <div class="widget-pic"><img src="images/viewall2.jpg"></div>
                 </div>
 
 
