--- a/aboutus3.html
+++ b/aboutus3.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="news_continer">
-                    <div class="widget-pic"><img src="images/aboutvideo.jpg"></div>
+                    <div class="widget-pic"><img src="images/IMG_4834.jpg"></div>
                     <div class="safety_article">
 
                     台北南港展覽2館於107年8月完工、108年3月4日正式營運，擁有雙層展廳(1F 、 4F) ，全館可規劃之標準攤位數達2146格，展示面積為台北世貿展覽大樓的1.5倍，全台獨有的多功能活動空間可容3,200人，室內空間 3,880㎡ ， 可依客製化隔出9種尺寸的隔間，餐飲空間設有3樓餐廳可容500人及B1商店街， 停車場設有汽車格1,296位、大型巴士可容32輛、機車格1,136格，提供來賓更便利及舒適的服務與設施。
