--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                                 <div class="goto_viewd">
                                     <ul>
                                         <li><a href="#"><img src="images/vricon.svg"></a></li>
-                                        <li>台北南港展覽館2館</li>
+                                        <li>建置中</li>
                                     </ul>
                                 </div>
                             </div>
