--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="dist/js/jquery.scroll-with-ease.js"></script>
     <script src="dist/js/main.js"></script>
     <title></title>
     <script type="text/javascript">
+
       $( document ).ready(function() {
         pageinit()
+        initIndexTraffic()
         $("#goMM").click(function(){
           checkMenu()
         })
+        $(window).on('scroll', function(e) {
+            checkIndexAnim()
+          });
       });
     </script>
 
@@ -26,12 +32,13 @@
 
 <body>
   <div class="pagemask"></div>
+
     <div id="id_wrapper">
         <header>
             <div id="id_header">
                 <div class="header_bg">
                     <div class="logo">
-                        <a href="index.html"><a href="index.html"><img src="images/logo.svg"></a></a>
+                        <a href="index.html"><img src="images/logo.svg"></a>
                     </div>
                     <nav>
                         <a id="goMM" href="#"><div class="search_Bg_menu"><img src="images/menu.svg"></div></a>
@@ -751,7 +758,6 @@
             </div>
         </footer>
     </div>
-
 </body>
 
 </html>
