--- a/organizers.html
+++ b/organizers.html
@@ -10,7 +10,19 @@
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="dist/js/jquery.scroll-with-ease.js"></script>
+    <script src="dist/js/main.js"></script>
     <title></title>
+    <script type="text/javascript">
+
+      $( document ).ready(function() {
+        initOrganizers()
+        $(window).on('scroll', function(e) {
+            checkOrganAnim()
+          });
+      });
+    </script>
 
 </head>
 
