aboutus8 jpg motifly

--- a/aboutus8.html
+++ b/aboutus8.html
@@ -143,15 +143,15 @@
             </div>
             <div class="swiper-container">
                 <div class="big_lightbanner swiper-wrapper">
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
-                    <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div>
+                    <div class="light_bn swiper-slide"><img src="images/IMG_4830.JPG"></div>
+                    <div class="light_bn swiper-slide"><img src="images/IMG_4832.JPG"></div>
+                    <div class="light_bn swiper-slide"><img src="images/IMG_4833.JPG"></div>
+                    <div class="light_bn swiper-slide"><img src="images/IMG_4834.JPG"></div>
+                    <div class="light_bn swiper-slide"><img src="images/IMG_4835.JPG"></div>
+                    <div class="light_bn swiper-slide"><img src="images/IMG_4836.JPG"></div>
+                    <div class="light_bn swiper-slide"><img src="images/IMG_4837.JPG"></div>
+                    <div class="light_bn swiper-slide"><img src="images/IMG_4839.JPG"></div>
+                    <!-- <div class="light_bn swiper-slide"><img src="images/traffic.jpg"></div> -->
                 </div>
                 <a class="ie-prev"><i class="mdi mdi-chevron-right"></i></a>
                 <a class="ie-next"><i class="mdi mdi-chevron-left"></i></a>
