--- a/visitors3.html
+++ b/visitors3.html
@@ -160,15 +160,13 @@
                 </div>
                 <div class="floor_btn">
                     <ul>
-                        <a href="#"><li>B1</li></a>
-                        <a href="#"><li>1F</li></a>
+                        <li class="vis_btn">1F</li>
                         <a href="#"><li>4F</li></a>
-                        <a href="#"><li>6F</li></a>
                         <a href="#"><li>7F</li></a>
                     </ul>
                 </div>
 
-                <div class="widget-pic"><img src="images/b1.jpg"></div>
+                <div class="widget-pic"><img src="images/1F.jpg"></div>
 
 
             </div>
