motifly date calendar

--- a/calendar.html
+++ b/calendar.html
@@ -148,15 +148,21 @@
                                 </div>
                             </div>
                                 <div class="calen-card_issuse">
-                                    <div class="calen-card_date">3/4-3/9</div>
+                                    <!-- <div class="calen-card_date">3/4-3/9</div> -->
                                     <div class="calen-title">台北國際工具機展覽會</div>
-                                    <div class="calen-font">
-                                        <ul>
-                                            <li>展覽活動期間：2019/3/4-3/9</li>
-                                            <li>展覽活動地點：一樓展場、四樓展場</li>
-                                            <li>展覽主辦單位：中華民國對外貿易發展協會</li>
-                                        </ul>
+                                    <div class="ca_time">
+                                        <div class="ca_title">活動期間：</div>
+                                        <div class="from_to_wrap">
+                                            <div class="from_box"><span>2019/3/27</span><span class="secd"><i class="mdi mdi-calendar-clock"></i> 09:00</span></div>
+                                            <div class="from_box_dash"></div>
+                                            <div class="from_box"><span>2019/3/27</span><span class="secd"><i class="mdi mdi-calendar-clock"></i> 18:00</span></div>
+                                        </div>
+                                        <div class="ca_title">活動地點：</div>
+                                        <div class="ca_font">一樓展場、四樓展場</div>
+                                        <div class="ca_title">主辦單位：</div>
+                                        <div class="ca_font">中華民國對外貿易發展協會</div>
                                     </div>
+
                                 </div>
                         </div>
                         <div class="calen-card-box">
