--- a/news.html
+++ b/news.html
@@ -105,7 +105,7 @@
         </header>
         <article>
             <div class="card-Parallax">
-                <div class="m-page-headerbg"></div>
+                <div class="m-page-news_bn"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">最新消息</div>
